# hse-demo-single-app

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
.k8s/: deployment.yaml  service.yaml
docs/: app-schemas.md  k3d-startup.md  k8s-startup.md
helm/: Chart.yaml  Taskfile.yaml  redis.yml  values.yml
helm/debug/: queue-app.yml  redis.yml
helm/templates/: _helpers.tpl  crashloopbackoff-inspect.yaml  cronjob.yaml  deployment.yaml  ingress.yaml  service.yaml  terminating-status-inspect.yaml
templates/: admin.html  index.html  tv.html
