[tool.poetry]
name = "queue"
version = "0.1.0"
description = ""
authors = ["Alexey Kutsenko <kutsenko_alexey@bk.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.4"}
redis = "^5.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
